# gaming-pc-optimizer

./: .gitignore  README.md  TESTPLAN.md  index.html  latest.json  package-lock.json  package.json  progress.md  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
docs/: DESIGN.md  SPEC.md
docs/ai/: network_advisor_prompt.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  ai_metrics.rs  ai_router.rs  ai_safety.rs  ai_schema.rs  app_settings.rs  audit_log.rs  backup.rs  bandwidth.rs  benchmark.rs  benchmark_history.rs  clipboard_opt.rs  cpu_affinity.rs  crash_report.rs  disk_health.rs  display_optimizer.rs  event_log.rs  fps.rs  frametime_monitor.rs  game_integrity.rs  game_log.rs  hardware.rs  hardware_suggestions.rs  hotkeys.rs  icons.rs  launcher.rs  memory_cleaner.rs  metrics.rs  mod.rs  network.rs  optimizer.rs  optimizer_graph.rs  osd.rs  policy.rs  power.rs  presets.rs  process.rs  profile_share.rs  profiles.rs  recommendation.rs  (+20 more)
src/components/about/: AboutPage.tsx
src/components/benchmark/: Benchmark.tsx  BenchmarkHistoryChart.tsx
src/config/: features.ts
src/data/: process_knowledge.ts  windows_presets.ts
src/hooks/: useSystemInfo.ts
src/lib/: VendorIcon.tsx  errorMessages.ts  hardwareIcons.ts  network_apply.ts  statusText.ts  utils.ts  windows_diff.ts
src/services/: recommendationService.ts
src/stores/: useAppStore.ts  useCommandPaletteStore.ts  useEditingStore.ts  useMetricsStore.ts  useOptimizeStore.ts  usePolicyStore.ts  useRecommendationStore.ts  useSafetyStore.ts  useSystemStore.ts  useToastStore.ts  useWatcherStore.ts
src/test/: setup.ts
src/types/: index.ts
(+104 files in other folders)
