[package]
name = "gaming-pc-optimizer"
version = "0.1.0"
description = "Gaming PC Optimizer"
authors = []
edition = "2021"

[lib]
name = "gaming_pc_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
winreg = "0.55"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
